--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
   <script src="./src/entities/Factory.js"></script>
   <script src="./src/entities/Player.js"></script>
   <script src="./src/entities/Enemy.js"></script>
+  <script src="./src/entities/Needles.js"></script>
   <script src="./src/entities/Trap.js"></script>
-  <script src="./src/entities/Additional.js"></script>
+  <script src="./src/entities/Chest.js"></script>
   <script src="./src/managers/gameManager.js"></script>
   <script src="./src/managers/spriteManager.js"></script>
   <script src="./src/managers/physicsManager.js"></script>
