--- a/src/html/leaderboard.html
+++ b/src/html/leaderboard.html
@@ -22,7 +22,7 @@
             </thead>
             <tbody></tbody>
         </table>
-        <button onclick="backToMenu()" class="menu__button">Back to Menu</button>
+        <button onclick="backToMenu()" class="leaderboard__button">Back to Menu</button>
     </div>
 
     <script>
